--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@
 
 .profile{
 	position: absolute;
-	width: 450%;
-	height: 450%;
+	width: 100%;
+	height: 100%;
 	background: url("OrekiHoutarou.jpg") center/ cover;
+	background: size:cover;
 	transition: .5s;
 }
 
