--- a/style.css
+++ b/style.css
@@ -4,24 +4,11 @@
 	box-sizing: border-box;
 }
 
-.container{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 280px;
-	height: 400px;
-	background: rgb(100, 91, 91);
-	border-radius: 225px;
-	box-shadow: 0 0 20px rgba(0,0,0,.3);
-	overflow: hidden;
-}
-
 .profile{
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: url("OrekiHoutarou.jpg") center/ cover;
+	background: url("background.jpg") center/ cover;
 	transition: .5s;
 }
 
