--- a/style.css
+++ b/style.css
@@ -1,15 +1,10 @@
 *{
-	margin: 0;
+        margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-}
-
-.profile{
-	position: absolute;
-	width: 100%;
-	height: 100%;
+{
+body{
 	background: url("background.jpg") center/ cover;
-	transition: .5s;
 }
 
 .text{
