--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	box-sizing: border-box;
 {
 body{
-	background: url("background.jpg") center/ cover;
+	background: url("OrekiHoutarou.jpg") center/ cover;
 }
 
 .text{
