--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body{
 	background: url("OrekiHoutarou.jpg") center/ cover;
 }
 
+.profile img{
+	border-radius:50%
+	margin-top:50px;
+	margin-left:100px;
+
 .text{
 	position: absolute;
 	bottom: 0;
