--- a/style.css
+++ b/style.css
@@ -9,100 +9,4 @@ body{
 	margin-left: 150px;
 	margin-top: 250px;
 
-.text{
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 200px;
-	background: rgb(255, 255, 255);
-	transform: translateY(230px);
-	transition: .5s;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-}
-
-.text #name{
-	margin-top: 10px;
-	display: flex;
-}
-
-.content{
-	text-align: center;
-	font-size: .8rem;
-	padding: 5px;
-	color: #000000;
-	opacity: 0;
-	transition: .5s ease;
-}
-
-span{
-	display: block;
-	transition: .7s cubic-bezier(.75, -1, 0, 1.15);
-	margin: 2px;
-}
-
-span:nth-child(1){
-	transform: translateX(-240px);
-}
-
-span:nth-child(2){
-	transform: translateX(240px);
-}
-
-.links{
-	display: flex;
-	margin-top: 20px;
-}
-
-.links a{
-	text-decoration: none;
-	display: block;
-	margin: 5px;
-	width: 40px;
-	height: 40px;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	font-size: 1.2rem;
-	color: #fff;
-	transition: .7s cubic-bezier(.75, -1, 0, 1.15);
-}
-
-a:nth-child(1){
-	background: #dd2a7b;
-	transform: translateX(-200px);
-}
-
-a:nth-child(2){
-	background: #26242e;
-	transform: translateY(200px);
-}
-
-a:nth-child(3){
-	background: #0077b5;
-	transform: translateX(200px);
-}
-
-.container:hover .text{
-	transform: translateY(0);
-}
-
-.container:hover .profile{
-	transform: translateY(-70px) scale(1.1);
-}
-
-.container:hover #name span{
-	transform: translateX(0);
-	transition-delay: .5s;
-}
-
-.container:hover .content{
-	opacity: 1;
-	transition-delay: 1.5s;
-}
-
-.container:hover .links a{
-	transform: translate(0,0);
-	transition-delay: .5s;
-}
+.
