--- a/style.css
+++ b/style.css
@@ -6,11 +6,15 @@ body{
 	background: url("OrekiHoutaou.jpg") center/ cover;
 }
 
-.profile img{
+.profile img {
 	width: 300px;
 	heigh: 300px;
 	border-radius: 50%;
 	margin-left: 150px;
 	margin-top: 150px;
+}
 
-.
+.hero h1 {
+	font-size: 2em;
+	font-weight: 300;
+	color: #373046;
