--- a/style.css
+++ b/style.css
@@ -12,12 +12,12 @@ body{
 	border-radius: 50%;
 	margin-left: 150px;
 	margin-top: 120px;
+	margin-bottom: 24px;
 }
 
 .profile h1 {
 	font-size: 2em;
 	font-weight: 300;
 	color: #373046;
-	margin-top: 24px;
 }
 	
