--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@ body{
 .profile h1 {
 	font-size: 2em;
 	font-weight: 300;
-	color: #373046;
+	color: #ffffff;
 }
 
 .profile p {
 	font-size: 2em;
-	color: #373046;
+	color: #ffffff;
